<resources>
    <string name="app_name">Microsoft Health</string>
    <string name="AnnotationCannotHaveNullX">Annotation cannot have a null X Axis.</string>
    <string name="AnnotationCannotHaveNullY">Annotation cannot have a null Y axis.</string>
    <string name="AnnotationCannotHaveSameXY">Annotation cannot have the same axis for both X and Y.</string>
    <string name="AnnotationCannotConvertNullX">Cannot convert null X value for annotation.</string>
    <string name="AnnotationCannotConvertNullY">Cannot convert null Y value for annotation.</string>
    <string name="AnnotationMustBeOnSameChart">The axes an annotation is associated with must belong to the same chart the annotation is on.</string>
    <string name="AxisDataPointsNotNull">You must supply all DataPoint parameter arguments, non-null</string>
    <string name="AxisDefaultRangeIsEmpty">Cannot set a default range with equal minimum and maximum values.</string>
    <string name="AxisDefaultRangeInternalIsEmpty">Cannot set default range due to transformations applied to this axis: have you set skip ranges that completely cover the data or default ranges?</string>
    <string name="AxisNullMajorTickFrequency">Null currentMajorTickFrequency</string>
    <string name="AxisUndefinedRange">The axis has an undefined data range and cannot be displayed</string>
    <string name="AxisUnrecognisedOrientation">tickLabel orientation not recognised</string>
    <string name="AxisInsufficientWidth">Axis width does not provide enough space to fit the tickmarks and ticklabels.</string>
    <string name="AxisRangeNotSetUserCall">Calling getPixelValueForUserValue before an axisRange has been set.</string>
    <string name="AxisRangeNotSetPixelCall">Calling getUserValueForPixelValue before an axisRange has been set.</string>
    <string name="AxisNullCustomTickMarkValues">Custom tick mark values cannot contain null.</string>
    <string name="BandSeriesBaselineNotApplicable">Baseline not applicable for BandSeries.</string>
    <string name="CandlestickSeriesBaselineNotApplicable">Baseline not applicable for CandlestickSeries.</string>
    <string name="CartesianInvalidDataXY">Data invalid for assigned x/y axes.</string>
    <string name="CartesianCannotAddPoint">Cannot add data point:</string>
    <string name="CartesianNeedMultiValueData">Band, candlestick and OHLC series require MultiValueData data points</string>
    <string name="CartesianBaselineWrongType">The current baseline for this series is invalid for the assigned x/y axes.</string>
    <string name="CategoryAxisSeriesAlreadyContainsPoint">Series already contains a datapoint with category</string>
    <string name="CategoryAxisIgnoresCustomTickValues">Category axes ignore custom tick mark values</string>
    <string name="ChartCannotAddNullSeries">Cannot add a null series to the chart.</string>
    <string name="ChartPieDonutInCartesian">PieDonut Series cannot be added to a chart containing CartesianSeries</string>
    <string name="ChartPieDonutCannotHaveAxes">PieDonut charts cannot have axes.</string>
    <string name="ChartCartesianInPieDonut">Cartesian Series cannot be added to a chart containing PieDonutSeries</string>
    <string name="ChartNoPrimaryX">No primary X axis set</string>
    <string name="ChartNoPrimaryY">No primary Y axis set</string>
    <string name="ChartNoVersionProperties">Unable to find version properties.</string>
    <string name="ChartFailedToCloseInputStream">Unable to close input stream while looking for version properties.</string>
    <string name="ChartCannotAddNullAxis">Cannot add/set a null axis to the chart.</string>
    <string name="ChartAlreadyHasThisAxis">Cannot add axis as it already belongs to this chart.</string>
    <string name="ChartAxisBelongsToAnotherChart">Cannot add an axis that belongs to another chart.</string>
    <string name="ChartPremiumOnly">This is a ShinobiCharts for Android Premium Edition-only feature.</string>
    <string name="ChartRendererExceptionInGL">Exception in GL code</string>
    <string name="ChartCannotPassInNullSeriesList">Cannot pass in a null list of series to hide or show.</string>
    <string name="CrosshairNullFocus">Unable to determine Crosshair position: must have non-null focus. Have you called setFocus on the crosshair?</string>
    <string name="CrosshairNullXOrYInFocusPoint">Focus cannot be null or have null X and Y values.</string>
    <string name="DateTimeAxisInvalidDateFrequency">The DateFrequency is invalid and will be ignored</string>
    <string name="NumberAxisInvalidFrequency">The frequency is invalid and will be ignored</string>
    <string name="OHLCSeriesBaselineNotApplicable">Baseline not applicable for OHLCSeries.</string>
    <string name="TickMarkManagerNoGhosts">Insufficient Ghosts for grid stripes</string>
    <string name="PieDonutSeriesInvalidData">Invalid data - Y value is not a number!</string>
    <string name="PieDonutSeriesYDataMustBePositive">Data point y values must be positive</string>
    <string name="RangeManagerUnableToSetRange">Unable to set axis range as axis has no associated data and no default range set</string>
    <string name="RangeManagerInvalidRangeRequested">Invalid axis range requested</string>
    <string name="RangeManagerLimitsCannotBeNaN">Range minimum and maximum cannot be infinite or NaNs</string>
    <string name="RangeManagerNonPositiveSpan">Ignoring range with %f span</string>
    <string name="SeriesNullDataAdapter">Trying to set a null DataAdapter, DataAdapter cannot be null</string>
    <string name="SeriesDataPointOutOfRange">Attempting to access data point out of range</string>
    <string name="SeriesStyleIsNull">Styles may not be null</string>
    <string name="StackSeriesIteratorOrdinatesOutofOrder">Ordinates of stacked series must increase at each point</string>
    <string name="TooltipNullCenter">Unable to determine Tooltip position: must have non-null center. Have you called setCenter on the tooltip?</string>
    <string name="TooltipNullXOrYInCenterPoint">Center cannot be null or have null X and Y values.</string>
    <string name="TooltipNullView">Tooltip cannot have a null View.</string>
    <string name="TooltipNullDataPoint">Cannot update tooltip with null dataPoint.</string>
    <string name="CannotAddNullUndefinedOrEmptySkip">Cannot add a null skip range or one with a zero or negative span.</string>
    <string name="CannotAddCalculatedUndefinedOrEmptySkip">Calculated skip range with min: %1$s and max: %2$s is invalid: cannot be added as it has zero or negative span</string>
    <string name="CannotAddNullRepeatedSkipRange">Cannot add a null repeated skip range.</string>
    <string name="CannotAddSkipToCategoryAxis">Cannot add a skip range to a category axis.</string>
    <string name="cargo_preference_last_ephemeris_check_time">cargo_preference_last_ephemeris_check_time</string>
    <string name="cargo_preference_last_ephemeris_upgrade_time">cargo_preference_last_ephemeris_upgrade_time</string>
    <string name="cargo_preference_last_ephemeris_json">cargo_preference_last_ephemeris_json</string>
    <string name="cargo_preference_last_timezone_check_time">cargo_preference_last_timezone_check_time</string>
    <string name="cargo_preference_last_timezone_upgrade_time">cargo_preference_last_timezone_upgrade_time</string>
    <string name="cargo_preference_last_timezone_json">cargo_preference_last_timezone_json</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">This app won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">This app won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="settings_preferences_header">Preferences</string>
    <string name="settings_preferences_units_section_header">Units</string>
    <string name="settings_preferences_units_weight_label">Weight</string>
    <string name="settings_preferences_units_temperature_label">Temperature</string>
    <string name="settings_preferences_units_distance_height_label">Distance and height</string>
    <string name="settings_preferences_gestures_header">Gestures</string>
    <string name="settings_preferences_region_format_header">Region format</string>
    <string name="settings_preferences_region_format_subheader">Format for date, time, etc. on your Band</string>
    <string name="settings_preferences_shake_to_send_feedback">Shake your phone to send us feedback.</string>
    <string name="golf_legend_value_under_3">-3</string>
    <string name="golf_legend_value_under_2">-2</string>
    <string name="golf_legend_value_under_1">-1</string>
    <string name="golf_legend_value_over_1">+1</string>
    <string name="golf_legend_value_over_2">+2</string>
    <string name="golf_legend_value_over_3">+3</string>
    <string name="golf_header_value_hole">HOLE</string>
    <string name="golf_header_value_yards">YARDS</string>
    <string name="golf_header_value_par">PAR</string>
    <string name="golf_header_value_index">HDCP</string>
    <string name="golf_header_value_score">SCORE</string>
    <string name="debug_actions_flush_cache">Flush Cache</string>
    <string name="debug_invalidate_oauth">Invalidate OAuth</string>
    <string name="debug_actions_reset_fre">Reset FRE</string>
    <string name="debug_actions_authenticate">Authenticate</string>
    <string name="debug_actions_fre">First-run Experience</string>
    <string name="debug_unregister_device">unregister your band</string>
    <string name="debug_register_device">Register Band</string>
    <string name="debug_set_oobe_complete">Set OOBE Complete flag</string>
    <string name="debug_set_notification_listeners">Enable/Disable Notification Listeners</string>
    <string name="debug_reset_oobe_complete">Reset OOBE Complete flag</string>
    <string name="debug_delete_credentials">Delete Credentials</string>
    <string name="debug_set_environment">Apply</string>
    <string name="debug_actions_clear_network_cache">Clear network cache</string>
    <string name="debug_header_caching">Caching (needs restart)</string>
    <string name="debug_header_notification_logging">Notification center logging (needs restart)</string>
    <string name="debug_header_refresh_token">Token Validation (needs restart)</string>
    <string name="debug_header_emulate_public_release_login">Emulate public release for logging (needs restart)</string>
    <string name="debug_header_raised_insights">Raised Insights</string>
    <string name="debug_header_tmag_connection">Is connected to TMAG</string>
    <string name="debug_env">Environment</string>
    <string name="debug_background_sync">Launch Background Sync</string>
    <string name="debug_force_quit">Force quit</string>
    <string name="debug_header_dynamic_configuration">Dynamic configuration load from cloud</string>
    <string name="background_agent">Background Agent</string>
    <string name="debug_session_header_value">Debug session header value</string>
    <string name="empty" />
    <string name="golf_legend_value_par">0</string>
    <string name="golf_recent_courses">Recent</string>
    <string name="golf_near_by_courses">Nearby</string>
    <string name="golf_browse_by_country_region">Browse by country/region</string>
    <string name="find_a_course">Find a course</string>
    <string name="golf_request_a_course">Request a Course</string>
    <string name="golf_sync_pro_tip_header">Pro Tip</string>
    <string name="golf_sync_pro_tip_text">To get the best data out of your round, make sure to fully charge your band.</string>
    <string name="golf_sync_pro_tip_text_hint">Remember to wear the band on your leading arm and don\'t switch it mid-round!</string>
</resources>