<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginLeft="10dp">
    <LinearLayout android:orientation="vertical" android:id="@+id/settings_fragment" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp">
        <Button android:id="@+id/debug_actions_flush_cache" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_actions_flush_cache"/>
        <Button android:id="@+id/debug_actions_clear_network_cache" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_actions_clear_network_cache"/>
        <Button android:id="@+id/debug_actions_reset_fre" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_actions_reset_fre"/>
        <Button android:id="@+id/debug_actions_authenticate" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_actions_authenticate"/>
        <Button android:id="@+id/debug_actions_fre" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_actions_fre"/>
        <Button android:id="@+id/debug_actions_register_device" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_register_device"/>
        <Button android:id="@+id/debug_actions_unregister_device" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_unregister_device"/>
        <Button android:id="@+id/debug_actions_invalidate_oauth" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_invalidate_oauth"/>
        <Button android:id="@+id/debug_actions_set_oobe_complete" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_set_oobe_complete"/>
        <Button android:id="@+id/debug_actions_reset_oobe_complete" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_reset_oobe_complete"/>
        <Button android:id="@+id/debug_actions_set_notification_listeners" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_set_notification_listeners"/>
        <Button android:id="@+id/debug_actions_delete_credentials" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/debug_delete_credentials"/>
    </LinearLayout>
</ScrollView>
