<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@color/app_white" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="horizontal" android:id="@+id/golf_legends" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="9dp">
        <com.microsoft.kapp.views.CustomFontTextView android:gravity="center" android:id="@+id/golf_legend_1" android:background="@color/BelowParDarkColor" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/golf_legend_value_under_3" android:layout_weight="1" style="@style/GolfLegendHeaderBoldTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:gravity="center" android:id="@+id/golf_legend_2" android:background="@color/BelowParMediumColor" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/golf_legend_value_under_2" android:layout_weight="1" style="@style/GolfLegendHeaderBoldTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:gravity="center" android:id="@+id/golf_legend_3" android:background="@color/BelowParLightColor" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/golf_legend_value_under_1" android:layout_weight="1" style="@style/GolfLegendHeaderBoldTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:gravity="center" android:id="@+id/golf_legend_4" android:background="@color/ParColor" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/golf_legend_value_par" android:layout_weight="1" style="@style/GolfLegendHeaderBoldTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:gravity="center" android:id="@+id/golf_legend_5" android:background="@color/AboveParLightColor" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/golf_legend_value_over_1" android:layout_weight="1" style="@style/GolfLegendHeaderBoldTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:gravity="center" android:id="@+id/golf_legend_6" android:background="@color/AboveParMediumColor" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/golf_legend_value_over_2" android:layout_weight="1" style="@style/GolfLegendHeaderBoldTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:gravity="center" android:id="@+id/golf_legend_7" android:background="@color/AboveParDarkColor" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/golf_legend_value_over_3" android:layout_weight="1" style="@style/GolfLegendHeaderBoldTextStyle"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@+id/golf_headers" android:layout_width="match_parent" android:layout_height="50dp">
        <com.microsoft.kapp.views.CustomFontTextView android:ellipsize="end" android:gravity="center" android:id="@+id/golf_header_1" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="17dp" android:text="@string/golf_header_value_hole" android:singleLine="true" android:layout_weight="1" style="@style/GolfLegendHeaderTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:ellipsize="end" android:gravity="center" android:id="@+id/golf_header_2" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="12dp" android:text="@string/golf_header_value_yards" android:singleLine="true" android:layout_weight="1" style="@style/GolfLegendHeaderTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:ellipsize="end" android:gravity="center" android:id="@+id/golf_header_3" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="12dp" android:text="@string/golf_header_value_par" android:singleLine="true" android:layout_weight="1" style="@style/GolfLegendHeaderTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:ellipsize="end" android:gravity="center" android:id="@+id/golf_header_4" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="12dp" android:text="@string/golf_header_value_index" android:singleLine="true" android:layout_weight="1" style="@style/GolfLegendHeaderTextStyle"/>
        <com.microsoft.kapp.views.CustomFontTextView android:ellipsize="end" android:gravity="center" android:id="@+id/golf_header_5" android:layout_width="0dp" android:layout_height="match_parent" android:layout_marginLeft="12dp" android:text="@string/golf_header_value_score" android:singleLine="true" android:layout_weight="1.1" style="@style/GolfLegendHeaderTextStyle"/>
    </LinearLayout>
    <ExpandableListView android:id="@+id/golf_scorecard_listview" android:background="@color/app_white" android:layout_width="match_parent" android:layout_height="match_parent"/>
</LinearLayout>
