<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_env" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:layout_gravity="center" android:id="@+id/debug_settings_environment_spinner" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <Button android:layout_gravity="center" android:id="@+id/debug_env_apply" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/debug_set_environment"/>
        <com.microsoft.kapp.views.CustomFontTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/debug_session_header_value"/>
        <EditText android:id="@+id/debug_session_header_value_edit" android:background="@drawable/bordertop" android:padding="4dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:inputType="text"/>
        <Button android:layout_gravity="center" android:id="@+id/debug_session_header_apply" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/debug_set_environment"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:text="@string/background_agent" style="@style/SettingsHeaderTextViewStyle"/>
        <Button android:layout_gravity="center" android:id="@+id/debug_launch_background_sync" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/debug_background_sync"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_header_caching" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:entries="@array/on_off_values" android:layout_gravity="center" android:id="@+id/debug_settings_caching_spinner" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_header_notification_logging" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:entries="@array/on_off_values" android:layout_gravity="center" android:id="@+id/logging_settings_caching_spinner" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_header_refresh_token" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:entries="@array/on_off_values" android:layout_gravity="center" android:id="@+id/debug_settings_token_refresh_spinner" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_header_emulate_public_release_login" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:entries="@array/on_off_values" android:layout_gravity="center" android:id="@+id/debug_settings_emulate_public_release" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <Button android:layout_gravity="center" android:id="@+id/debug_force_quit_app" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10dp" android:text="@string/debug_force_quit"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_header_raised_insights" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:entries="@array/on_off_values" android:layout_gravity="center" android:id="@+id/debug_settings_raised_insights_feature" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_header_tmag_connection" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:entries="@array/on_off_values" android:layout_gravity="center" android:id="@+id/debug_settings_tmag_connected_feature" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
        <com.microsoft.kapp.views.CustomFontTextView android:textSize="18sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/debug_header_dynamic_configuration" style="@style/SettingsHeaderTextViewStyle"/>
        <Spinner android:entries="@array/on_off_values" android:layout_gravity="center" android:id="@+id/debug_settings_dynamic_configuration_feature" android:background="@drawable/bordertop" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"/>
    </LinearLayout>
</ScrollView>
